--- a/ytyt/sass/_header.scss
+++ b/ytyt/sass/_header.scss
@@ -6,23 +6,28 @@
 };
 
 .header{
-    // background: #F9F8FD;
-    position: relative;
-    // max-width: 100%;
+    position: absolute;
+        top: 12px;
+        padding: 0;
+        margin: 0 auto;
+        // background-color: red;
+        width: 100%;
+        height: 50px;
+        z-index: 5;
     &_block{
         margin: 0 auto;
         position: absolute;
         z-index: 5;
         // border: 1px solid #000;
-        left: 50%;
-        transform: translateX(-50%);
-        top: 12px;
+        // left: 50%;
+        // transform: translateX(-50%);
+        // top: 12px;
         // transform: translateY(50px );
         display: flex;
         flex-direction: row;
         align-items:center;
         justify-content: space-between;
-        max-width: 1160px;
+        // max-width: 1160px;
         width: 100%;
         height: 51px;
         border-radius: 75px;
