--- a/ytyt/sass/_promo.scss
+++ b/ytyt/sass/_promo.scss
@@ -21,11 +21,10 @@
 
     position: relative;
     overflow: hidden;
-    height: 555px;
+    height: 603px;
     padding-bottom: 20px;
     @media (min-width: 200px) and (max-width:1199px) {
-      height: 612px;   
-      height: 689px;   
+      height: 750px;   
     };
     &_text{
         position: relative;
@@ -135,7 +134,7 @@
     }
     &_right{
         position: absolute;
-        transform: translate(130px, -943px);
+        transform: translate(130px, -992px);
         z-index: 0;
         @media (min-width: 200px) and (max-width:1199px) {
             transform: translate(-277px, -643px);
@@ -214,6 +213,64 @@
             top: 22px;
             width: 210px;
             height: 219.272px;
+        }
+    }
+    .down_elemetn{
+        position: absolute;
+        width: 100%;
+        height: 47px;
+        // background-color: red;
+        bottom: 0;
+        border-radius: -50px;
+        @media (max-width: 767px) and (min-width: 200px) {
+    
+        };
+        .drop{
+            // width: 200px;
+            position: absolute;
+            height: 60px;
+            left: 50%;
+            transform: translateX(calc(-50% + 3px));
+            @media (max-width: 767px) and (min-width: 200px) {
+                height: 50px;
+            };
+            
+        }
+        .promo_down_circl{
+            
+        }
+        .promo_arrow{
+            margin: 0 auto;
+            display: flex;
+            justify-content: center;
+            align-items:center;
+            width: 37px;
+            height: 37px;
+            border-radius: 100%;
+            background-color: #fff;
+            z-index: 99;
+            transition: 1s;
+            &:hover{
+                background-color: #222;
+            }
+            @media (max-width: 767px) and (min-width: 200px) {
+    
+            };
+        }
+    }
+    .down_rectangles{
+        position: absolute;
+        top: calc(100% - 44px);
+        width: 100%;
+        height: 46px;
+        display: flex;
+        column-gap: 173px;
+        .rectangle{
+            width: 100%;
+            background-color:#fff;
+            @media (max-width: 767px) and (min-width: 200px) {
+    
+            };
         }
     }
 }
