--- a/ytyt/sass/_pop-up.scss
+++ b/ytyt/sass/_pop-up.scss
@@ -1,13 +1,18 @@
 .pop-up{
-    position:absolute;
-    top: 0;
-    z-index: 99;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: rgba(25, 26, 38, 0.9);
+    display: none;
+    
+    &_active{
+        display: flex;
+        position:fixed;
+        top: 0;
+        z-index: 99;
+        width: 100%;
+        height: 100vh;
+        // display: flex;
+        justify-content: center;
+        align-items: center;
+        background: rgba(25, 26, 38, 0.9);
+    }
     &_content{
         position: relative;
         display: flex;
