--- a/HotSkins/sass/_footer.scss
+++ b/HotSkins/sass/_footer.scss
@@ -1,252 +1,22 @@
 .footer{
-    padding-top: 63px;
-    background: #f9f8fd;
-    &_main{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Rubik;
+    font-size: 14px;
+    font-weight: 400;
+    border-top: 1px solid rgb(39, 46, 59);;
+    &_content{
         display: flex;
         justify-content: space-between;
-
-        @media (min-width: 768px) and (max-width:1199px) {
-    
-        };
-        @media (max-width: 767px) and (min-width: 200px) {
-            justify-content: center;
-            align-items: center;
-            flex-direction: column; 
-        };
-        .logos{
-            display: flex;
-            flex-direction: column;
-            @media (min-width: 768px) and (max-width:1199px) {
-    
-            };
-            @media (max-width: 767px) and (min-width: 200px) {
-                justify-content: center;
-                align-items: center;
-                flex-direction: column; 
-            };
-
-            .main_logo{
-                display: flex;
-                flex-direction: row;
-                column-gap:18px;
-                
-               &_img{
-                width: 87.16px;
-                height: 32px;
-               }
-               &_text{
-                color: rgb(142, 142, 142);
-                font-size: 16px;
-                font-weight: 400;
-                line-height: 19px;
-                letter-spacing: 0%;
-                text-align: left;
-               } 
-            }
-            .socials{
-                margin-top: 40px;
-                display: inline-block;
-                display: flex;
-            @media (min-width: 768px) and (max-width:1199px) {
-    
-            };
-            @media (max-width: 767px) and (min-width: 200px) {
-                margin-top: 25px;
-            };
-                &_list{
-                    list-style-type: none;
-                    padding: 0;
-                    margin: 0;
-                    display: flex;
-                    flex-direction: row;
-                    column-gap:16px;
-                    
-                    &_item{
-                        
-                        &_link{
-                            width: 38px;
-                            height: 38px;
-                            border-radius:100%;
-                            background: rgb(34, 37, 59);
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                            transition: 0.5s;
-
-                            &:hover{
-                                background: rgb(241, 85, 37);
-
-                            };
-                            &_img{
-
-                            }
-                        }
-                    }
-                }
-            }
-        }
-        .footer_right{
-            display: flex;
-            flex-wrap: wrap;
-            column-gap: 160px;
-            @media (min-width: 768px) and (max-width:1199px) {
-    
-            };
-            @media (max-width: 767px) and (min-width: 200px) {
-                justify-content: center;
-                align-items: center;
-                flex-direction: column; 
-            };
-            .info{
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-                display: flex;
-                flex-direction: column;
-                row-gap: 25px;
-                display: flex;
-            @media (min-width: 768px) and (max-width:1199px) {
-    
-            };
-            @media (max-width: 767px) and (min-width: 200px) {
-                margin-top: 43px; 
-            };
-                &_item{
-                    display: flex;
-                    align-items: stretch;
-                    
-                    @media (max-width: 767px) and (min-width: 200px) {
-                        text-align: center;
-                        justify-content: center;
-                    };
-                    &_link{
-                        text-decoration: none;
-                        color: rgb(34, 37, 59);
-                        font-size: 13px;
-                        font-weight: 400;
-                        // line-height: 104.4%;
-                        letter-spacing: 0%;
-                        transition: 0.5s;
-                        
-                        &:hover{
-                            color: rgb(241, 85, 37);
-                        };
-                    }
-                }
-            }
-            .contacts_container{
-                .contacts{
-                    @media (max-width: 767px) and (min-width: 200px) {
-                        margin-top: 43px;
-                    };
-                    &_number{
-                        text-decoration: none;
-                        color: rgb(56, 191, 242);
-                        font-size: 16px;
-                        font-weight: 400;
-                        line-height: 23px;
-                        letter-spacing: 0%;
-                        text-align: left;
-                        
-                    }
-                    &_mail{
-                        margin-top: 4px;
-                        text-decoration: none;
-                        color: rgb(34, 37, 59);
-                        font-size: 16px;
-                        font-weight: 400;
-                        line-height: 23px;
-                        letter-spacing: 0%;
-                        text-align: left;
-                        
-                    }
-                    @media (max-width: 767px) and (min-width: 200px) {
-                        text-align: center;
-                    };
-                }
-                .organisation_id{
-                    margin-top: 65px;
-                    color: rgb(142, 142, 142);
-                    
-                    font-size: 13px;
-                    font-weight: 400;
-                    line-height: 23px;
-                    letter-spacing: 0%;
-                    text-align: left;
-                    @media (max-width: 767px) and (min-width: 200px) {
-                        text-align: center;
-                        margin-top: 35px;
-                    };
-                }
-            }
-        }
+        align-items: center;
+        height: 48px;
     }
-
-    .footer_line{
-        width: 100%;
-        border: 1px solid rgb(216, 216, 216);
-        margin-top: 50px;
-        @media (max-width: 767px) and (min-width: 200px) {
-            margin-top: 31px;
-        };
-    }
-
-    .footer_bottom{
+    &_menu{
         display: flex;
-        justify-content: space-between;
-        margin-top: 28px;
-        
-        padding-bottom: 28px;
-        @media (max-width: 767px) and (min-width: 200px) {
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            margin-top: 25px;
-            padding-bottom: 25px;
-        };
-        .copyright{
-            text-decoration: none;
-            color: rgb(142, 142, 142);
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 23px;
-            letter-spacing: 0%;
-            text-align: left;
-        }
-        .footer_bottom_right{
-            display: flex;
-            column-gap: 64px;
-            row-gap: 6px;
-            @media (max-width: 767px) and (min-width: 200px) {
-                margin-top: 13px;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-            };
-        }
-        .footer_bottom_link{
-            text-decoration: none;
-            color: rgb(142, 142, 142);
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 23px;
-            letter-spacing: 0%;
-            text-align: left;
-            transition: 0.3s;
-            &:hover{
-                color: rgb(241, 85, 37);
-            }
-            @media (max-width: 767px) and (min-width: 200px) {
-                
-                font-size: 12px;
-                line-height: 23px;
-                text-align: center;
-                color: rgb(241, 85, 37);
-                &:hover{
-                    color: rgb(142, 142, 142);
-                }
-            };
-        }
-
+        column-gap: 32px;
+        margin: 0;
+    }
+    a{
+        text-decoration: none;
+        color: rgba(255, 255, 255, 0.5);
     }
 }
