--- a/HotSkins/css/style.css
+++ b/HotSkins/css/style.css
@@ -167,7 +167,9 @@ body {
         -webkit-box-align: center;
             -ms-flex-align: center;
                 align-items: center;
-        border: 1px solid #3d4554; }
+        border: 1px solid #3d4554;
+        -webkit-column-gap: 16px;
+                column-gap: 16px; }
         .select-game .active_items .game_select .game:first-child {
           -webkit-box-sizing: border-box;
                   box-sizing: border-box;
@@ -204,6 +206,42 @@ input[type="checkbox"]:checked + label::before {
   background-color: rgba(255, 206, 8, 0.6);
   background-size: 100%;
   background-image: url("../icons/check.svg"); }
+
+label.red::before {
+  border: 1px solid #ed422b; }
+
+input[type="checkbox"]:checked + label.red::before {
+  background-color: rgba(237, 66, 43, 0.6); }
+
+label.pink::before {
+  border: 1px solid #cf309c; }
+
+input[type="checkbox"]:checked + label.pink::before {
+  background-color: rgba(207, 48, 156, 0.6); }
+
+label.purple::before {
+  border: 1px solid #8533ed; }
+
+input[type="checkbox"]:checked + label.purple::before {
+  background-color: rgba(133, 51, 237, 0.6); }
+
+label.blue::before {
+  border: 1px solid #275ce4; }
+
+input[type="checkbox"]:checked + label.blue::before {
+  background-color: rgba(39, 92, 228, 0.6); }
+
+label.light_blue::before {
+  border: 1px solid #6ab2f4; }
+
+input[type="checkbox"]:checked + label.light_blue::before {
+  background-color: rgba(106, 178, 244, 0.6); }
+
+label.white::before {
+  border: 1px solid white; }
+
+input[type="checkbox"]:checked + label.white::before {
+  background-color: rgba(255, 255, 255, 0.6); }
 
 .filters {
   background: #20222a;
